--- a/data/resources/ui/meson.build
+++ b/data/resources/ui/meson.build
@@ -1,5 +1,6 @@
 blps = [
     'window.blp',
+    'shell.blp',
 ]
 
 uis = []
@@ -9,8 +10,15 @@ endforeach
 
 blueprint_compiler = find_program('blueprint-compiler', version: '>= 0.8.0')
 
-blueprints = custom_target('blueprints',
+blueprints = custom_target(
+    'blueprints',
     input: blps,
     output: uis,
-    command: [blueprint_compiler, 'batch-compile', '@OUTDIR@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
+    command: [
+        blueprint_compiler,
+        'batch-compile',
+        '@OUTDIR@',
+        '@CURRENT_SOURCE_DIR@',
+        '@INPUT@',
+    ],
 )
