--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = gir-files
 	url = https://github.com/gtk-rs/gir-files
 	update = none
+[submodule "astal-rs"]
+	path = astal-rs
+	url = https://github.com/suyashtnt/astal-rs
