--- a/data/meson.build
+++ b/data/meson.build
@@ -2,22 +2,20 @@
 appdata_conf = configuration_data()
 appdata_conf.set('app-id', application_id)
 appdata_conf.set('gettext-package', gettext_package)
-appdata_file = i18n.merge_file(
-  input: configure_file(
-    input: '@0@.metainfo.xml.in.in'.format(base_id),
-    output: '@BASENAME@',
-    configuration: appdata_conf
-  ),
+appdata_file = configure_file(
+  input: '@0@.metainfo.xml'.format(base_id),
   output: '@0@.metainfo.xml'.format(application_id),
-  po_dir: podir,
+  configuration: appdata_conf,
   install: true,
-  install_dir: datadir / 'metainfo'
+  install_dir: datadir,
 )
 
 # Validate Appdata
 if appstreamcli.found()
-  test('validate-appdata', appstreamcli,
-    args: ['validate', '--no-net', '--explain', appdata_file]
+  test(
+    'validate-appdata',
+    appstreamcli,
+    args: ['validate', '--no-net', '--explain', appdata_file],
   )
 endif
 
@@ -27,44 +25,35 @@ subdir('resources')
 # Desktop file
 desktop_conf = configuration_data()
 desktop_conf.set('icon', application_id)
-desktop_file = i18n.merge_file(
-    type: 'desktop',
-    input: configure_file(
-        input: '@0@.desktop.in.in'.format(base_id),
-        output: '@BASENAME@',
-        configuration: desktop_conf
-    ),
-    output: '@0@.desktop'.format(application_id),
-    po_dir: podir,
-    install: true,
-    install_dir: datadir / 'applications'
+desktop_file = configure_file(
+  input: '@0@.desktop.in.in'.format(base_id),
+  output: '@0@.desktop'.format(application_id),
+  configuration: desktop_conf,
+  install: true,
+  install_dir: datadir / 'applications',
 )
 
 # Validate Desktop file
 if desktop_file_validate.found()
-    test(
-        'validate-desktop',
-        desktop_file_validate,
-        args: [
-        desktop_file.full_path()
-        ],
-        depends: desktop_file,
-    )
+  test(
+    'validate-desktop',
+    desktop_file_validate,
+    args: [desktop_file.full_path()],
+  )
 endif
 
 # GSchema
 install_data(
-    'in.wobbl.commashell.gschema.xml',
-    install_dir: datadir / 'glib-2.0' / 'schemas'
+  'in.wobbl.commashell.gschema.xml',
+  install_dir: datadir / 'glib-2.0' / 'schemas',
 )
 gnome.compile_schemas()
 
 # Validata GSchema
 if glib_compile_schemas.found()
-    test(
-        'validate-gschema', glib_compile_schemas,
-        args: [
-        '--strict', '--dry-run', meson.current_build_dir()
-        ],
-    )
+  test(
+    'validate-gschema',
+    glib_compile_schemas,
+    args: ['--strict', '--dry-run', meson.current_build_dir()],
+  )
 endif
