feat: add app launcher/calculator

--- a/data/resources/resources.gresource.xml.in
+++ b/data/resources/resources.gresource.xml.in
@@ -5,6 +5,8 @@
     <file compressed="true" preprocess="xml-stripblanks">ui/right.ui</file>
     <file compressed="true" preprocess="xml-stripblanks">ui/notification.ui</file>
     <file compressed="true" preprocess="xml-stripblanks">ui/notifications.ui</file>
+    <file compressed="true" preprocess="xml-stripblanks">ui/launcher.ui</file>
+    <file compressed="true" preprocess="xml-stripblanks">ui/app-entry.ui</file>
     <file>style.css</file>
     <file
       compressed="true"
