--- a/data/resources/ui/meson.build
+++ b/data/resources/ui/meson.build
@@ -3,6 +3,8 @@ blps = [
     'right.blp',
     'notification.blp',
     'notifications.blp',
+    'launcher.blp',
+    'app-entry.blp',
 ]
 
 uis = []
