--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,17 @@ edition = "2021"
 [dependencies]
 adw = { version = "0.7.1", package = "libadwaita", features = ["v1_6"] }
 gtk = { version = "0.9.4", package = "gtk4", features = ["v4_16", "blueprint"] }
-tokio = { version = "1.41.1", features = ["rt", "macros", "rt-multi-thread"] }
+tokio = { version = "1.41.1", features = [
+    "rt",
+    "macros",
+    "rt-multi-thread",
+    "time",
+] }
 astal = { path = "./astal-rs/astal", features = ["gtk_v4_6", "gio_v2_80"] }
 astal-io = { path = "./astal-rs/astal-io" }
 astal-mpris = { path = "./astal-rs/mpris" }
 astal-cava = { path = "./astal-rs/cava" }
 astal-notifd = { path = "./astal-rs/notifd" }
+astal-apps = { path = "./astal-rs/apps" }
 gtk4-layer-shell = "0.4.0"
 vte4 = { version = "0.8.0", features = ["v0_78"] }
